syntax = "proto3";

package organization;

import "google/protobuf/any.proto";

option go_package = "2rent.organization.v1;organizationv1";

service OrganizationService {
    rpc CreateOrganization (CreateOrganizationRequest) returns (CreateOrganizationResponse);
    rpc UpdateOrganization (UpdateOrganizationRequest) returns (UpdateOrganizationResponse);
    rpc ListOrganizations (ListOrganizationsRequest) returns (ListOrganizationsResponse);
    rpc CreateOrganizationDoc (CreateOrganizationDocRequest) returns (CreateOrganizationDocResponse);
    rpc ListOrganizationDocs (ListOrganizationDocsRequest) returns (ListOrganizationDocsResponse);
    rpc CreateApartment (CreateApartmentRequest) returns (CreateApartmentResponse);
    rpc UpdateApartment (UpdateApartmentRequest) returns (UpdateApartmentResponse);
    rpc DeleteApartment (DeleteApartmentRequest) returns (DeleteApartmentResponse);
    rpc ListApartments (ListApartmentsRequest) returns (ListApartmentsResponse);
    rpc ShowOrganizationApartments (ShowOrganizationApartmentsRequest) returns (ShowOrganizationApartmentsResponse);
}

message CreateOrganizationRequest {
    string bin = 1;
    string type = 2;
    string name = 3;
    Address legal_address = 4;
}

message CreateOrganizationResponse {
    Organization organization = 1;
}

message UpdateOrganizationRequest {
    string id = 1;
    string bin = 2;
    string type = 3;
    string name = 4;
    Address legal_address = 5;
}

message UpdateOrganizationResponse {
    Organization organization = 1;
}

message ListOrganizationsRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListOrganizationsResponse {
    repeated Organization organizations = 1;
}

message CreateOrganizationDocRequest {
    string organization_id = 1;
    string doc_type = 2;
    string doc_url = 3;
}

message CreateOrganizationDocResponse {
    OrganizationDoc organization_doc = 1;
}

message ListOrganizationDocsRequest {
    string organization_id = 1;
    int32 page = 2;
    int32 limit = 3;
}

message ListOrganizationDocsResponse {
    repeated OrganizationDoc organization_docs = 1;
}

message CreateApartmentRequest {
    string organization_id = 1;
    string apartment_name = 2;
    string location = 3;
    int32 price = 4;
    string availability = 5;
    repeated ApartmentImage apartment_images = 6;
    repeated ApartmentCharacteristic apartment_characteristics = 7;
}

message CreateApartmentResponse {
    Apartment apartment = 1;
}

message UpdateApartmentRequest {
    string id = 1;
    string organization_id = 2;
    string apartment_name = 3;
    string location = 4;
    int32 price = 5;
    string availability = 6;
    repeated ApartmentImage apartment_images = 7;
    repeated ApartmentCharacteristic apartment_characteristics = 8;
}

message UpdateApartmentResponse {
    Apartment apartment = 1;
}

message DeleteApartmentRequest {
    string apartment_id = 1;
}

message DeleteApartmentResponse {
    bool success = 1;
}

message ListApartmentsRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListApartmentsResponse {
    repeated Apartment apartments = 1;
}

message ShowOrganizationApartmentsRequest {
    string organization_id = 1;
}

message ShowOrganizationApartmentsResponse {
    repeated Apartment apartments = 1;
}

message Organization {
    string id = 1;
    string bin = 2;
    string type = 3;
    string name = 4;
    Address legal_address = 5;
}

message OrganizationDoc {
    string id = 1;
    string organization_id = 2;
    string doc_type = 3;
    string doc_url = 4;
    string uploaded_at = 5;
}

message Apartment {
    string id = 1;
    string organization_id = 2;
    string apartment_name = 3;
    string location = 4;
    int32 price = 5;
    string availability = 6;
    repeated ApartmentImage apartment_images = 7;
    repeated ApartmentCharacteristic apartment_characteristics = 8;
}

message ApartmentImage {
    string id = 1;
    string apartment_id = 2;
    string image_url = 3;
    int32 image_index = 4;
}

message ApartmentCharacteristic {
    string id = 1;
    string apartment_id = 2;
    string name = 3;
    string data_type = 4;
    google.protobuf.Any value = 5;
}

message Address {
    string id = 1;
    string address_name = 2;
    string type = 3;
    string district = 4;
    string city = 5;
    double latitude = 6;
    double longitude = 7;
}
