syntax = "proto3";

package user;

option go_package = "2rent.user.v1;userv1";

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    User user = 2;
}

message RegisterRequest {
    string email = 1;
    string phone_number = 2;
    string password = 3;
}

message RegisterResponse {
    string token = 1;
    User user = 2;
}

message UpdateUserRequest {
    string user_id = 1;
    string email = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    string phone_number = 6;
    string avatar_url = 7;
    string role = 8;
    bool verified = 9;
    string organization_id = 10;
}

message UpdateUserResponse {
    User user = 1;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message ListUsersRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListUsersResponse {
    repeated User users = 1;
}

message DeleteUserRequest {
    string user_id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message User {
    string id = 1;
    string uin = 2;
    string email = 3;
    string password_hash = 4;
    string phone_number = 5;
    string first_name = 6;
    string last_name = 7;
    string avatar_url = 8;
    bool verified = 9;
    string role = 10;
    string organization_id = 11;
    string created_at = 12;
    string updated_at = 13;
}
